--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@unicef/material-ui-currency-textfield": "^0.8.6",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
@@ -21,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-swipeable-views": "^0.14.0",
+    "socket.io-client": "^4.1.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
