--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@material-ui/core": "^4.12.0",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@microsoft/signalr": "^5.0.9",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.13",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
@@ -18,7 +20,7 @@
     "react-input-mask": "^2.0.4",
     "react-number-format": "^4.6.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-swipeable-views": "^0.14.0",
     "socket.io-client": "^4.1.3",
     "web-vitals": "^1.0.1"
