--- a/package.json
+++ b/package.json
@@ -10,15 +10,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "antd": "^4.16.13",
     "axios": "^0.21.1",
+    "express": "^4.17.1",
+    "gh-pages": "^3.2.3",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
-    "react-currency-format": "^1.0.0",
-    "react-currency-masked-input": "^2.5.0",
     "react-dom": "^17.0.2",
-    "react-input-mask": "^2.0.4",
-    "react-number-format": "^4.6.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-swipeable-views": "^0.14.0",
