--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ts-deliveryadm",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://calidi.netlify.app/",
   "dependencies": {
     "@material-ui/core": "^4.12.0",
     "@material-ui/icons": "^4.11.2",
