--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "ts-deliveryadm",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://calidi.netlify.app/",
   "dependencies": {
     "@material-ui/core": "^4.12.0",
     "@material-ui/icons": "^4.11.2",
@@ -47,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "react-intl-currency-input": "^0.2.6"
+    "react-intl-currency-input": "^0.2.6",
+    "terser-brunch": "^4.1.0"
   }
 }
