--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "compress.js": "^1.2.1",
     "express": "^4.17.1",
     "gh-pages": "^3.2.3",
     "lodash": "^4.17.21",
